# CashFlow-Guard

./: .gitignore  CLAUDE.md
cashflowguard/: Makefile  OUTREACH_GUIDE.md  QUICKSTART.md  README.md  REAL_DATASET_GUIDE.md  REAL_DATA_ANALYSIS.md  REAL_DATA_EDITION.md  collection_messages.csv  dashboard.py  outreach_standalone.py  pyproject.toml
cashflowguard/cashflowguard/: __init__.py  cli.py  cli_outreach.py  config.py  requirements.txt
cashflowguard/cashflowguard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cashflowguard/cashflowguard/analytics/: __init__.py  aging.py  ar_metrics.py  forecasting.py
cashflowguard/cashflowguard/collections/: collections_scheduler.py  message_generator.py
cashflowguard/cashflowguard/core/: action_logger.py
cashflowguard/cashflowguard/io/: __init__.py  loaders.py  validators.py
cashflowguard/cashflowguard/ml/: __init__.py  features.py  predict.py  train.py
cashflowguard/cashflowguard/recommendations/: __init__.py  engine.py
cashflowguard/cashflowguard/storage/: __init__.py  actions_store.py
cashflowguard/cashflowguard/templates/: email_firm.j2  email_friendly.j2  email_neutral.j2  sms_firm.j2  sms_friendly.j2
cashflowguard/cashflowguard/utils/: __init__.py  dates.py  logging.py
cashflowguard/data/real/: customers.csv  invoices.csv  payments.csv
cashflowguard/data/sample/: customers.csv  invoices.csv  payments.csv
cashflowguard/scripts/: generate_realistic_b2b_data.py  generate_synthetic_data.py  transform_uci_data.py
cashflowguard/tests/: conftest.py  test_analytics.py  test_features.py  test_predict.py  test_utils.py  test_validators.py
